[metadata]
name = wotw-cli
version = 0.0.0
author = CJ Harries
author_email = cj@wizardsoftheweb.pro
license = ISC
description = A framework for creating CLI apps
long_description = file: README.rst
keywords =
    cli
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
url = https://github.com/thecjharries/wotw-cli#readme
project_urls =
    Issue Tracker = https://github.com/thecjharries/wotw-cli/issues

; [bdist_wheel]
; universal = 1

[options]
packages = find:
include_package_data = True
install_requires =
	pytest-runner
tests_require =
	mock
	pytest

[tool:pytest]
addopts = -v -x --color=yes --cov-report html --cov-report term --cov=wotw_cli

[aliases]
test = pytest


